--- a/src/taglib-sharp.csproj
+++ b/src/taglib-sharp.csproj
@@ -50,6 +50,7 @@
     <Compile Include="TagLib\ICodec.cs" />
     <Compile Include="TagLib\ListBase.cs" />
     <Compile Include="TagLib\Matroska\Attachment.cs" />
+    <Compile Include="TagLib\Matroska\EBMLreader.cs" />
     <Compile Include="TagLib\Matroska\IUIDElement.cs" />
     <Compile Include="TagLib\Matroska\SimpleTag.cs" />
     <Compile Include="TagLib\Matroska\Tags.cs" />
