--- a/tests/packages.config
+++ b/tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GtkSharp" version="3.1.2" targetFramework="net45" />
+  <package id="GtkSharp.Win32" version="3.1.2" targetFramework="net45" />
   <package id="NUnit" version="3.6.1" targetFramework="net45" />
   <package id="NUnit.Console" version="3.6.1" targetFramework="net45" />
   <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net45" />
