Revered back 'tests' project so it uses the same nuget package versions as the one expected by Travis. Removed 'AssemblyInfo' reference in 'configure' file. Added strong name reference to project.

--- a/src/taglib-sharp.csproj
+++ b/src/taglib-sharp.csproj
@@ -11,6 +11,8 @@
     <Authors>Brian Nickel</Authors>
     <AssemblyName>taglib-sharp</AssemblyName>
     <RootNamespace>TagLib</RootNamespace>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\taglib-sharp.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net4|AnyCPU'">
