--- a/tests/packages.config
+++ b/tests/packages.config
@@ -2,12 +2,16 @@
 <packages>
   <package id="GtkSharp" version="3.1.2" targetFramework="net45" />
   <package id="GtkSharp.Win32" version="3.1.2" targetFramework="net45" />
-  <package id="NUnit" version="3.6.1" targetFramework="net45" />
-  <package id="NUnit.Console" version="3.6.1" targetFramework="net45" />
-  <package id="NUnit.ConsoleRunner" version="3.6.1" targetFramework="net45" />
-  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net45" />
-  <package id="NUnit.Extension.NUnitV2Driver" version="3.6.0" targetFramework="net45" />
-  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net45" />
-  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net45" />
-  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net45" />
+  <package id="Microsoft.CodeCoverage" version="1.0.3" targetFramework="net462" />
+  <package id="Microsoft.NET.Test.Sdk" version="15.5.0" targetFramework="net462" />
+  <package id="Microsoft.TestPlatform.TestHost" version="15.5.0" targetFramework="net462" />
+  <package id="NUnit" version="3.9.0" targetFramework="net462" />
+  <package id="NUnit.Console" version="3.8.0" targetFramework="net462" />
+  <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net462" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net462" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.7.0" targetFramework="net462" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net462" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.3" targetFramework="net462" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.7.0" targetFramework="net462" />
+  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net462" />
 </packages>
