Converted projects to Netstandard 2.0 (Net 4.0 still supported). Actual code has not been changed. Everything was compatible.

--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -179,6 +179,7 @@
     <Compile Include="fixtures\TagLib.Tests.FileFormats\AudibleFormat.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\XmlNullEndedTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\jpegSonyDscRX100M4.cs" />
+    <Compile Include="MainWindow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
