Switch from xbuild to msbuild.
xbuild is slowly getting deprecated in favor for the official msbuild
tool which has since been open sourced.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ install:
 
 script:
   - ./autogen.sh
-  - xbuild taglib-sharp.sln
+  - msbuild taglib-sharp.sln
   - cd tests
   - mono ../packages/NUnit.ConsoleRunner.3.6.1/tools/nunit3-console.exe --labels=All tests.dll
