--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 sudo: required
 dist: trusty
 language: csharp
-mono:
-  - latest
 solution: taglib-sharp.sln
+dotnet: 2.1.4
+mono: latest
 
 # https://github.com/travis-ci/travis-ci/issues/5932#issuecomment-215693171
 before_install:
@@ -15,6 +15,7 @@ install:
   - sudo apt-get update -qq > /dev/null
   - mono .nuget/nuget.exe restore taglib-sharp.sln -Verbosity detailed
   - mono .nuget/nuget.exe install NUnit.Runners -Version 3.2.1 -OutputDirectory packages
+  - dotnet restore
 
 script:
   - ./autogen.sh
