--- a/tests/packages.config
+++ b/tests/packages.config
@@ -10,4 +10,5 @@
   <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net45" />
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net45" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net45" />
 </packages>
