--- a/tests/packages.config
+++ b/tests/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GtkSharp" version="3.1.2" targetFramework="net45" />
   <package id="GtkSharp.Win32" version="3.1.2" targetFramework="net45" />
@@ -10,6 +10,5 @@
   <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net45" />
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.3" targetFramework="net45" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.7.0" targetFramework="net45" />
-  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net45" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net45" />
 </packages>
