--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".\\src\\TaglibSharp.Tests\\raw-samples"]
-	path = .\\src\\TaglibSharp.Tests\\raw-samples
+[submodule "src/TaglibSharp.Tests/raw-samples"]
+	path = src/TaglibSharp.Tests/raw-samples
 	url = https://github.com/f-spot/raw-samples.git
