--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,8 @@ script:
   - msbuild TaglibSharp.sln
   - cd src/TaglibSharp.Tests/bin/Debug
   - mono ../../../../packages/NUnit.ConsoleRunner.3.8.0/tools/nunit3-console.exe --labels=All net462/TaglibSharp.Tests.dll
-  - mono ../../../../packages/NUnit.ConsoleRunner.3.8.0/tools/nunit3-console.exe --labels=All netstandard2.0/TaglibSharp.Tests.dll
+# This errors out for some reason:
+  # System.IO.FileNotFoundException: Unable to find tests for C:\code\taglib-sharp\src\TaglibSharp.Tests\bin\Debug\netstandard2.0\TaglibSharp.Tests.dll.
+  # Make sure test project has a nuget reference of package "Microsoft.NET.Test.Sdk" and framework version settings are appropriate.
+  # Rerun with /diag option to diagnose further.
+  #  - mono ../../../../packages/NUnit.ConsoleRunner.3.8.0/tools/nunit3-console.exe --labels=All netstandard2.0/TaglibSharp.Tests.dll
