--- a/src/TaglibSharp.Tests/TaglibSharp.Tests.csproj
+++ b/src/TaglibSharp.Tests/TaglibSharp.Tests.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net462;netstandard2.0</TargetFrameworks>
@@ -19,6 +19,10 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="GtkSharp">
       <Version>3.1.2</Version>
@@ -26,9 +30,7 @@
     <PackageReference Include="GtkSharp.Win32">
       <Version>3.1.2</Version>
     </PackageReference>
-    <PackageReference Include="NUnit">
-      <Version>3.10.1</Version>
-    </PackageReference>
+    <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit.ConsoleRunner">
       <Version>3.8.0</Version>
     </PackageReference>
