--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -9,11 +9,8 @@ GENERATE_TEST_FIXTURE = GenerateTestFixture
 REFERENCES = -r:taglib-sharp.dll
 EXAMPLES_BUILD = taglib-sharp.dll $(SET_PICTURES).exe $(LIST_TYPES).exe $(BATCH_SET).exe $(PARSE_PHOTO).exe $(STRIP_IMAGE).exe
 
-if HAVE_GNOME_SHARP
-EXAMPLES_BUILD += $(READ_FROM_URI).exe
 if HAVE_EXIV2
 EXAMPLES_BUILD += $(GENERATE_TEST_FIXTURE).exe
-endif
 endif
 
 all: $(EXAMPLES_BUILD)
@@ -21,20 +18,15 @@ all: $(EXAMPLES_BUILD)
 taglib-sharp.dll:
 	if [ ! -e $@ ]; then ln -s $(top_builddir)/src/taglib-sharp.dll $@; fi
 
-if HAVE_GNOME_SHARP
-$(READ_FROM_URI).exe: $(READ_FROM_URI).cs
-	$(MCS) -out:$@ -debug $(REFERENCES) $(GNOME_SHARP_LIBS) $<
-
 if HAVE_EXIV2
 $(GENERATE_TEST_FIXTURE).exe: $(GENERATE_TEST_FIXTURE).cs listData extractKey
-	$(MCS) -out:$@ -debug $(REFERENCES) $(GNOME_SHARP_LIBS) $<
+	$(MCS) -out:$@ -debug $(REFERENCES) $<
 
 listData: listData.cpp
 	g++ -o $@ $(EXIV2_LIBS) $<
 
 extractKey: extractKey.cpp
 	g++ -o $@ $(EXIV2_LIBS) $<
-endif
 endif
 
 $(SET_PICTURES).exe: $(SET_PICTURES).cs
@@ -56,6 +48,6 @@ EXTRA_DIST = $(READ_FROM_URI).cs $(SET_PICTURES).cs $(LIST_TYPES).cs $(BATCH_SET
 	$(srcdir)/covers/sample*
 
 DISTCLEANFILES = *.pidb
-CLEANFILES = *.dll *.exe *.mdb
+CLEANFILES = *.dll *.exe *.pdb
 MAINTAINERCLEANFILES = Makefile.in
 
