example csproj and code refresh

--- a/examples/ReadFromUri.csproj
+++ b/examples/ReadFromUri.csproj
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="3.5" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -9,7 +9,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>ReadFromUri</RootNamespace>
     <AssemblyName>ReadFromUri</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,9 +20,7 @@
     <WarningLevel>4</WarningLevel>
     <Commandlineparameters>../tests/samples/sample.ogg</Commandlineparameters>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <Execution>
-      <Execution clr-version="Net_2_0" />
-    </Execution>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -32,23 +30,17 @@
     <WarningLevel>4</WarningLevel>
     <Commandlineparameters>../tests/samples/sample_v2_only.mp3</Commandlineparameters>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <Execution>
-      <Execution clr-version="Net_2_0" />
-    </Execution>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ReadFromUri.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\taglib-sharp.csproj">
+    <ProjectReference Include="..\src\TaglibSharp\taglib-sharp.csproj">
       <Project>{6B143A39-C7B2-4743-9917-92262C60E9A6}</Project>
       <Name>taglib-sharp</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="gnome-vfs-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
