--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,12 @@
 version: 2.2.0.{build}
 image: Visual Studio 2017
 
+before_build:
+- nuget restore
+
 build_script:
 - cmd: >-
     git submodule update --init --recursive
-    nuget restore
 
     msbuild /m /p:Configuration=Release /clp:v=m TaglibSharp.sln /bl /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 
