--- a/src/Debug/Debug.csproj
+++ b/src/Debug/Debug.csproj
@@ -1,10 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net462;netstandard2.0</TargetFrameworks>
-    <ApplicationIcon />
+    <TargetFrameworks>$(TaglibSharpTargetFramework)</TargetFrameworks>
     <OutputType>Exe</OutputType>
-    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
