--- a/src/TaglibSharp.Tests/TaglibSharp.Tests.csproj
+++ b/src/TaglibSharp.Tests/TaglibSharp.Tests.csproj
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net462;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>$(TaglibSharpTargetFramework)</TargetFrameworks>
     <RootNamespace>TaglibSharp.Tests</RootNamespace>
     <AssemblyName>TaglibSharp.Tests</AssemblyName>
     <ReleaseVersion>2.2.0.0</ReleaseVersion>
@@ -30,12 +30,13 @@
     <PackageReference Include="GtkSharp.Win32">
       <Version>3.1.2</Version>
     </PackageReference>
-    <PackageReference Include="NUnit" Version="3.10.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NUnit.ConsoleRunner">
-      <Version>3.8.0</Version>
+      <Version>3.9.0</Version>
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter">
-      <Version>3.10.0</Version>
+      <Version>3.12.0</Version>
     </PackageReference>
   </ItemGroup>
 
