--- a/src/TaglibSharp/Makefile.am
+++ b/src/TaglibSharp/Makefile.am
@@ -2,4 +2,4 @@ MAINTAINERCLEANFILES = Makefile.in
 
 EXTRA_DIST =
 
-include $(top_srcdir)/build/xbuild.include
+include $(top_srcdir)/build/msbuild.include
