[Build] Autotools works again including make dist

--- a/configure.ac
+++ b/configure.ac
@@ -66,6 +66,11 @@ if test "x$with_docs" = "xyes"; then
 		AC_MSG_ERROR([You need to install monodoc, or pass --disable-docs to configure to skip documentation installation])
 	fi
 
+	AC_PATH_PROG(MDASSEMBLER, mdassembler, no)
+	if test "x$MDASSEMBLER" = "xno"; then
+		AC_MSG_ERROR([You need to install mdassembler, or pass --disable-docs to configure to skip documentation installation])
+	fi
+
 	DOCDIR=`$PKG_CONFIG monodoc --variable=sourcesdir`
 	AC_SUBST(DOCDIR)
 	AM_CONDITIONAL(BUILD_DOCS, true)
