[Build] Make make test work

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,10 +30,11 @@ MAINTAINERCLEANFILES = \
 
 
 all: sln_build
-	echo "Making All"
+	echo "Building TaglibSharp solution"
 
-test:
-	cd src/TaglibSharp.Tests; make test; cd ../..;
+test: all
+	nuget install NUnit.Runners -Version 3.9.0 -OutputDirectory packages
+	$(MONO) packages/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe --labels=All $(srcdir)/src/TaglibSharp.Tests/bin/Debug/net462/TaglibSharp.Tests.dll
 
 distwin: all
 	mkdir -p $(srcdir)/$(WINDIR)
