--- a/.travis.yml
+++ b/.travis.yml
@@ -2,28 +2,27 @@ sudo: required
 dist: trusty
 language: csharp
 solution: TaglibSharp.sln
-dotnet: 2.1.4
 mono: latest
 
 # https://github.com/travis-ci/travis-ci/issues/5932#issuecomment-215693171
-before_install:
-  - mkdir -p .nuget
-  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-  - mono .nuget/nuget.exe # Output NuGet's version number
+#before_install:
+#  - mkdir -p .nuget
+#  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+#  - mono .nuget/nuget.exe # Output NuGet's version number
 
 install:
   - sudo apt-get update -qq > /dev/null
-  - mono .nuget/nuget.exe restore TaglibSharp.sln -Verbosity detailed
-  - mono .nuget/nuget.exe install NUnit.Runners -Version 3.8.0 -OutputDirectory packages
-  - dotnet restore
+    #  - mono .nuget/nuget.exe restore TaglibSharp.sln -Verbosity detailed
+  - mono .nuget/nuget.exe install NUnit.Runners -Version 3.9.0 -OutputDirectory packages
 
 script:
   - ./autogen.sh
-  - msbuild TaglibSharp.sln
+  - make
+  - make dist # Let's make sure we don't break make dist
   - cd src/TaglibSharp.Tests/bin/Debug
-  - mono ../../../../packages/NUnit.ConsoleRunner.3.8.0/tools/nunit3-console.exe --labels=All net462/TaglibSharp.Tests.dll
+  - mono ../../../../packages/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe --labels=All net462/TaglibSharp.Tests.dll
 # This errors out for some reason:
   # System.IO.FileNotFoundException: Unable to find tests for C:\code\taglib-sharp\src\TaglibSharp.Tests\bin\Debug\netstandard2.0\TaglibSharp.Tests.dll.
   # Make sure test project has a nuget reference of package "Microsoft.NET.Test.Sdk" and framework version settings are appropriate.
   # Rerun with /diag option to diagnose further.
-  #  - mono ../../../../packages/NUnit.ConsoleRunner.3.8.0/tools/nunit3-console.exe --labels=All netstandard2.0/TaglibSharp.Tests.dll
+  #  - mono ../../../../packages/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe --labels=All netstandard2.0/TaglibSharp.Tests.dll
