[Build] Kick ye old CIs

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ solution: TaglibSharp.sln
 mono: latest
 
 # https://github.com/travis-ci/travis-ci/issues/5932#issuecomment-215693171
-#before_install:
-#  - mkdir -p .nuget
-#  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-#  - mono .nuget/nuget.exe # Output NuGet's version number
+before_install:
+  - mkdir -p .nuget
+  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+  - mono .nuget/nuget.exe # Output NuGet's version number
 
 install:
   - sudo apt-get update -qq > /dev/null
