--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,7 @@ AM_MAINTAINER_MODE
 
 ASSEMBLY_NAME="$PACKAGE"
 ASSEMBLY_VERSION="$VERSION"
+TARGET_FRAMEWORK="net462"
 
 POLICY_2_0_VERSIONS="2.0.0.0-$ASSEMBLY_VERSION"
 AC_SUBST(POLICY_2_0_VERSIONS)
@@ -11,9 +12,11 @@ AC_SUBST(POLICY_2_0_VERSIONS)
 AC_SUBST(VERSION)
 AC_SUBST(ASSEMBLY_VERSION)
 AC_SUBST(ASSEMBLY_NAME)
+AC_SUBST(TARGET_FRAMEWORK)
 
 AC_PROG_INSTALL
 AC_PROG_GREP
+
 
 MONODOC_REQUIRED=1.1.9
 
