--- a/src/TaglibSharp/TaglibSharp.csproj
+++ b/src/TaglibSharp/TaglibSharp.csproj
@@ -3,19 +3,27 @@
   <PropertyGroup>
     <TargetFrameworks>$(TaglibSharpTargetFramework)</TargetFrameworks>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\taglib-sharp.xml</DocumentationFile>
-    <Version>$(ReleaseVersion)</Version>
-    <PackageId>TagLibSharp</PackageId>
-    <Product>TagLib#</Product>
-    <Description>A library for reading and writing audio and image metatags.</Description>
-    <Copyright>Copyright (c) 2006-2007 Brian Nickel.  Copyright (c) 2009-2019 Other contributors</Copyright>
-    <Company />
-    <Authors>Brian Nickel</Authors>
     <AssemblyName>taglib-sharp</AssemblyName>
     <RootNamespace>TagLib</RootNamespace>
     <AssemblyOriginatorKeyFile>..\..\taglib-sharp.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Version>2.2.0.0</Version>
+    <PackageId>TagLibSharp</PackageId>
+    <Product>TagLib#</Product>
+    <Description>A library for for reading and writing metadata in media files, including video, audio, and photo formats.</Description>
+    <Copyright>Copyright (c) 2006-2007 Brian Nickel.  Copyright (c) 2009-2019 Other contributors</Copyright>
+    <Authors>Brian Nickel, Gabriel Burt, Stephen Shaw, etc</Authors>
+    <owners />
     <PackageProjectUrl>https://github.com/mono/taglib-sharp</PackageProjectUrl>
+    <Company />
+    <PackageLicenseUrl>http://www.opensource.org/licenses/lgpl-2.1.php</PackageLicenseUrl>
+    <PackageReleaseNotes>Version 2.2.0.0
+January 21, 2019
+* Lots and lots of updates including net462 and .netstandard 2.0</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
