--- a/src/TaglibSharp/TaglibSharp.csproj
+++ b/src/TaglibSharp/TaglibSharp.csproj
@@ -1,33 +1,33 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
 
-<PropertyGroup>
-<TargetFrameworks>$(TaglibSharpTargetFramework)</TargetFrameworks>
-<DocumentationFile>bin\$(Configuration)\$(TargetFramework)\taglib-sharp.xml</DocumentationFile>
-<AssemblyName>taglib-sharp</AssemblyName>
-<RootNamespace>TagLib</RootNamespace>
-<AssemblyOriginatorKeyFile>..\..\taglib-sharp.snk</AssemblyOriginatorKeyFile>
-<SignAssembly>true</SignAssembly>
-<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-</PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>$(TaglibSharpTargetFramework)</TargetFrameworks>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\TagLibSharp.xml</DocumentationFile>
+    <AssemblyName>TagLibSharp</AssemblyName>
+    <RootNamespace>TagLib</RootNamespace>
+    <AssemblyOriginatorKeyFile>..\..\taglib-sharp.snk</AssemblyOriginatorKeyFile>
+    <SignAssembly>true</SignAssembly>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
 
-<PropertyGroup>
-<Version>$(ReleaseVersion)</Version>
-<PackageId>TagLibSharp-Lidarr</PackageId>
-<Product>TagLib#</Product>
-<Description>A library for for reading and writing metadata in media files, including video, audio, and photo formats.</Description>
-<Copyright>Copyright (c) 2006-2007 Brian Nickel.  Copyright (c) 2009-2019 Other contributors</Copyright>
-<Authors>Brian Nickel, Gabriel Burt, Stephen Shaw, etc</Authors>
-<owners />
-<PackageProjectUrl>https://github.com/lidarr/taglib-sharp</PackageProjectUrl>
-<Company />
-<PackageLicenseUrl>http://www.opensource.org/licenses/lgpl-2.1.php</PackageLicenseUrl>
-<PackageReleaseNotes>Version $(ReleaseVersion)
-January 21, 2019
-* Lots and lots of updates including net462 and .netstandard 2.0</PackageReleaseNotes>
-</PropertyGroup>
+  <PropertyGroup>
+    <Version>2.2.0.0</Version>
+    <PackageId>TagLibSharp-Lidarr</PackageId>
+    <Product>TagLib#</Product>
+    <Description>A library for for reading and writing metadata in media files, including video, audio, and photo formats.</Description>
+    <Copyright>Copyright (c) 2006-2007 Brian Nickel.  Copyright (c) 2009-2019 Other contributors</Copyright>
+    <Authors>Brian Nickel, Gabriel Burt, Stephen Shaw, etc</Authors>
+    <owners />
+    <PackageProjectUrl>https://github.com/lidarr/taglib-sharp</PackageProjectUrl>
+    <Company />
+    <PackageLicenseUrl>http://www.opensource.org/licenses/lgpl-2.1.php</PackageLicenseUrl>
+  </PropertyGroup>
 
-<ItemGroup>
-<None Remove="Makefile.am" />
-</ItemGroup>
+  <ItemGroup>
+    <None Remove="Makefile.am" />
+  </ItemGroup>
 
 </Project>
