--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
     <PropertyGroup>
-        <ReleaseVersion>2.2.0.0-beta</ReleaseVersion>
-        <RepositoryUrl>https://github.com/mono/taglib-sharp</RepositoryUrl>
+        <ReleaseVersion>2.2.0.0</ReleaseVersion>
+        <RepositoryUrl>https://github.com/lidarr/taglib-sharp</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <TaglibSharpTargetFramework>net462;netstandard2.0</TaglibSharpTargetFramework>
         <LangVersion>latest</LangVersion>
