--- a/.github/workflows/windowsnetcore.yml
+++ b/.github/workflows/windowsnetcore.yml
@@ -20,4 +20,6 @@ jobs:
       with:
         dotnet-version: 3.1.100
     - name: Build with dotnet
-      run: dotnet build --configuration Release 
+      run: dotnet build --configuration Release
+    - name: Run unit tests
+      run: dotnet test --verbosity normal
