Try to fix ubuntu build

--- a/examples/ReadFromUri/ReadFromUri.csproj
+++ b/examples/ReadFromUri/ReadFromUri.csproj
@@ -22,4 +22,8 @@
     <Compile Include="ReadFromUri.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" PrivateAssets="All" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
