--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,7 @@
     <ReleaseVersion>2.2.0.0</ReleaseVersion>
     <RepositoryUrl>https://github.com/mono/taglib-sharp</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <TaglibSharpTargetFramework>net45;netstandard2.0</TaglibSharpTargetFramework>
+    <TaglibSharpTargetFramework>net45;netstandard2.0;netstandard2.1</TaglibSharpTargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 </Project>
