--- a/examples/SetPictures/SetPictures.csproj
+++ b/examples/SetPictures/SetPictures.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\..\src\TaglibSharp\TaglibSharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" PrivateAssets="All" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
