--- a/src/Debug/Debug.csproj
+++ b/src/Debug/Debug.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\TaglibSharp\TaglibSharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" PrivateAssets="All" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
