Switch to .netstandard2.0

--- a/examples/ReadFromUri/ReadFromUri.csproj
+++ b/examples/ReadFromUri/ReadFromUri.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
-    <TargetFrameworks>$(TaglibSharpTargetFramework)</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.1;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
